# simulith

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  linter.yml
include/: simulith.h  simulith_can.h  simulith_gpio.h  simulith_i2c.h  simulith_pwm.h  simulith_spi.h  simulith_time.h  simulith_uart.h
src/: simulith_can.c  simulith_client.c  simulith_common.c  simulith_gpio.c  simulith_i2c.c  simulith_pwm.c  simulith_server.c  simulith_server_standalone.c  simulith_spi.c  simulith_time.c  simulith_uart.c
test/: CMakeLists.txt  test_can.c  test_gpio.c  test_i2c.c  test_pwm.c  test_simulith.c  test_simulith_performance.c  test_spi.c  test_uart.c
unity/: unity.c  unity.h  unity_internals.h
